# solflow

./: .gitignore  Cargo.toml  HOW_TO_QUERY_SIGNALS.md  PHASE5_QUICKREF.md  PHASE5_SUMMARY.md  PHASE6_CHECKLIST.md  PHASE6_SIGNALS_GUIDE.md  PHASE6_SUMMARY.md  example_queries.sql  example_signal_queries.sql  verify_phase5.sh
docs/: 20251129-pumpswap-dynamic-sol-delta-implementation.md  20251129-pumpswap-only-ingestion.md  20251129-pumpswap-variant-support-design.md  FRONTEND_FIX.md  PHASE5_DELIVERY.md  PHASE5_PERSISTENCE.md  PHASE7_ANALYSIS.md  PHASE7_COMPLETE.md  PHASE7_DASHBOARD_README.md  PHASE7_FIXES.md  PHASE7_QUICKSTART.md  PHASE7_SESSION1_SUMMARY.md  PHASE7_SESSION2_SUMMARY.md  PHASE8_UI_REFACTOR_SUMMARY.md  PHASE9_IMPLEMENTATION_SUMMARY.md  SETUP_INSTRUCTIONS.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/api/blocklist/: route.ts
frontend/app/api/dashboard/: route.ts
frontend/app/api/follow/: route.ts
frontend/app/api/metadata/: route.ts
frontend/app/api/signals/: route.ts
frontend/app/api/token/[mint]/: route.ts
frontend/app/api/token/fetch/: route.ts
frontend/app/dashboard/: error.tsx  loading.tsx  page.tsx
frontend/components/dashboard/: ActionBar.tsx  DashboardClient.tsx  DashboardRow.tsx  DashboardSkeleton.tsx  DashboardTable.tsx  FlowSparkline.tsx  FollowButton.tsx  SignalBadge.tsx
frontend/hooks/: useDexScreenerPolling.ts  useFollowedTokens.ts  usePolling.ts
frontend/lib/: types.ts
frontend/lib/client/: dexscreener.ts  format.ts  toast.ts
frontend/lib/server/: db.ts
sql/: 00_initial.sql  00_token_metadata.sql  01_mint_blocklist.sql  01_phase9_metadata_fields.sql  02_token_aggregates.sql  03_token_signals.sql  04_system_metrics.sql  05_token_metadata_enhanced.sql  06_dca_activity_buckets.sql  06_price_monitoring_index.sql  07_token_signal_summary.sql  08_token_rolling_metrics.sql  09_token_trades.sql  10_phase6_signals_engine.sql
src/: db.rs  lib.rs  main.rs  processor.rs  signals.rs  sqlite_pragma.rs  state.rs  trade_extractor.rs  types.rs
tests/: db_init_test.rs  trade_extraction_tests.rs
