[package]
name = "solflow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Carbon Framework - Local Path Dependencies
carbon-core = { path = "../carbon/crates/core" }
carbon-macros = { path = "../carbon/crates/macros" }
carbon-yellowstone-grpc-datasource = { path = "../carbon/datasources/yellowstone-grpc-datasource" }
carbon-pumpfun-decoder = { path = "../carbon/decoders/pumpfun-decoder" }
carbon-jupiter-swap-decoder = { path = "../carbon/decoders/jupiter-swap-decoder" }
carbon-raydium-amm-v4-decoder = { path = "../carbon/decoders/raydium-amm-v4-decoder" }

# Solana Dependencies
solana-sdk = "2.1"
solana-program = "2.1"
solana-transaction-status = "2.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
dashmap = "5.5"
