[package]
name = "solflow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Carbon Framework - Local Path Dependencies
carbon-core = { path = "../carbon/crates/core" }
carbon-macros = { path = "../carbon/crates/macros" }
carbon-yellowstone-grpc-datasource = { path = "../carbon/datasources/yellowstone-grpc-datasource" }
carbon-pumpfun-decoder = { path = "../carbon/decoders/pumpfun-decoder" }
carbon-pump-swap-decoder = { path = "../carbon/decoders/pump-swap-decoder" }
carbon-moonshot-decoder = { path = "../carbon/decoders/moonshot-decoder" }
carbon-bonkswap-decoder = { path = "../carbon/decoders/bonkswap-decoder" }
carbon-jupiter-dca-decoder = { path = "../carbon/decoders/jupiter-dca-decoder" }

# Solana Dependencies
solana-sdk = "2.1"
solana-program = "2.1"
solana-transaction-status = "2.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
dashmap = "5.5"
yellowstone-grpc-proto = { version = "10.0.0", features = ["convert"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
